spade-tests/src/snapshots/spade_tests__typeinference__pipeline_stage_valid_is_a_bool.snap
---
source: spade-tests/src/typeinference.rs
---
pipeline(1) x(clk: clock) -> bool {
        let a: int<8> = stage.valid;
    reg;
        true
}

error: Expected type int<8>, got bool
  ┌─ testinput:2:25
  │
2 │         let a: int<8> = stage.valid;
  │                ------   ^^^^^^^^^^^ Expected int<8>
  │                │         
  │                Type int<8> inferred here
  │
  = note: Expected: int<8>
               Got: bool
