spade-tests/src/snapshots/spade_tests__typeinference__recursive_type_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    decl x;
    let x = [x];
}


error: Inferred a recursive type [*, _]
  ┌─ testinput:3:9
  │
3 │     let x = [x];
  │         ^ Type [*, _] inferred here
  │
  = help: The recursion happens at the type marked "*"
