spade-tests/src/snapshots/spade_tests__typeinference__reset_must_be_of_type_bool.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock, b: int<4>) -> int<8> {
    reg(clk) a reset (b: 0) = 3;
    a
}


error: Register reset condition must be a bool, got int<4>
  ┌─ testinput:2:23
  │
1 │ entity test(clk: clock, b: int<4>) -> int<8> {
  │                            ------ Type int<4> inferred here
2 │     reg(clk) a reset (b: 0) = 3;
  │                       ^ expected bool
  │
  = note: Expected: bool
               Got: int<4>
