spade-tests/src/snapshots/spade_tests__typeinference__return_type_mismatch.snap
---
source: spade-tests/src/typeinference.rs
---
entity main() -> int<1> {
    let a: int<2> = 0;
    a
}


error: Output type mismatch. Expected int<1>, got int<2>
  ┌─ testinput:1:25
  │  
1 │   entity main() -> int<1> {
  │                    ------ int<1> type specified here
  │ ╭─────────────────────────^
2 │ │     let a: int<2> = 0;
  │ │                - Type 2 inferred here
3 │ │     a
4 │ │ }
  │ ╰─^ Found type int<2>
  │  
  = note: Expected: 1
                in: int<1>
               Got: 2
                in: int<2>
