spade-tests/src/snapshots/spade_tests__typeinference__string_const_type_expr_are_rejected.snap
---
source: spade-tests/src/typeinference.rs
---
fn main() -> bool {
    const type { "evil" }
}


error: Type-level strings have no value-level equivalent
  ┌─ testinput:2:5
  │
2 │     const type { "evil" }
  │     ^^^^^^^^^^^^^^^^^^^^^ Type-level string cannot be converted to a value
